# auto-assign

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
archive/: README.md
archive/templates/: index.html  suggest.html
docs/: 20260609-next-version-plan.md  ASSIGNMENT_CONTROL.md  ASSIGNMENT_STATUS.md  ASSISTX_ROUTER_REALIGNMENT.md  EVENT_CONTRACTS.md  HLD.md  IMPLEMENTATION_PLAN.md  INTEGRATION_CONTRACTS.md  INTERFACE_CONTRACTS.md  LLD.md  LOCAL_VALIDATION.md  MIGRATION_PLAN.md  NEO4J_BRAIN_AND_CACHE_POLICY.md  STATE_MACHINE_MAPPING.md
docs/plans/: 2026-06-08-auto-repos-orchestration-plan.md
scripts/: auto_assign_trigger_cycle.py
src/auto_assign/: __init__.py  cache.py  clients.py  contracts_shim.py  control.py  events.py  logging_utils.py  main.py  metrics.py  migration.py  models.py  scorer.py  service.py  settings.py
templates/: base.html  transcript.html
tests/: test_api.py  test_assignment_control_enforcement.py  test_assignment_event_types.py  test_cache.py  test_clients.py  test_contracts_shim.py  test_scheduler.py  test_scorer.py
tests/integration/: test_health.py
