[project]
name = "auto-assign"
version = "0.1.0"
description = "Assignment, trigger, and heartbeat layer for the AssistX agent ecosystem."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "starlette>=0.37.2,<0.39.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
flask = [
  "flask>=3.0.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
]
neo4j = [
  "neo4j>=5.14.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.11.0",
  "pre-commit>=3.5.0",
]
all = [
  "flask>=3.0.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "neo4j>=5.14.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ["tests/"]
